[metadata]
name = pypack-guide
description = Test Python Package
author = Leo
author-email = lyc010197@gmail.com
url = https://zcemycl.github.io/

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    pdf2image==1.14.0
    logzero==1.7.0
    opencv-python==4.5.5.64
    matplotlib==3.5.2
    recordlinkage==0.15
    azure-cosmos==4.3.0
    sqlalchemy==1.4.39
    pyodbc==4.0.32
    python-dotenv==0.20.0
    pymupdf==1.20.1
    tenacity==8.0.1
    azure-identity==1.10.0
    azure-keyvault==4.2.0
    azure-storage-blob==12.12.0

[options.packages.find]
where = src
exclude =
    tests app

# Additional install requirements for running tests
[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
linting =
    black==22.3.0
    isort==5.9.2
    flake8==3.8.4

[tool:pytest]
# Options for py.test:
addopts =
    #--cov afi-front-end --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    .tox
    dist
    .eggs