[metadata]
name = pypack_guide
description = Test Python Package
author = Leo

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
# install_requires =
#     pdf2image==1.14.0
#     logzero==1.7.0
#     matplotlib==3.5.2
#     recordlinkage==0.15
#     python-dotenv==0.20.0
#     tenacity==8.0.1

[options.packages.find]
where = src
exclude =
    test app

# Additional install requirements for running tests
[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
linting =
    black==22.3.0
    isort==5.9.2
    flake8==3.8.4

[tool:pytest]
# Options for py.test:
addopts =
    #--cov afi-front-end --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = test

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    .tox
    dist
    .eggs