[metadata]
name = pypack-guide
description = Test Python Package
version=0.0.1
author = Leo
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools_scm
package_dir =
    = src

[options.packages.find]
where = src
exclude =
    test app

# Additional install requirements for running tests
[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
linting =
    black==22.3.0
    isort==5.9.2
    flake8==3.8.4

[tool:pytest]
# Options for py.test:
testpaths =
    test
addopts =
    --cov src
    --cov-report term-missing
    --disable-warnings
    --verbose
norecursedirs =
    dist
    build
    .tox

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    .tox
    dist
    .eggs
